Fix UI flicker when switch to visual mode

--- a/css/style.less
+++ b/css/style.less
@@ -81,8 +81,8 @@ html, body {
 
 .line, .line-number {
   white-space: pre;
-  height: @line-height;
-  line-height: @line-height;
+  height: 1rem;
+  line-height: 1rem;
   display: flex;
   align-items: center;
 }
@@ -97,10 +97,8 @@ html, body {
   width: 1ch;
   background: rgba(255,255,255,.5);
   white-space: pre;
-  height: 0.86rem;
+  height: 1rem;
   border-radius: 1px;
-  // padding: 0 0 1px 0;
-  transform: translateY(0.1rem)
 }
 
 .status {
@@ -135,7 +133,7 @@ html, body {
 }
 
 .highlights div, .selections div, .lint div {
-  height: @line-height;
+  height: 1rem;;
   position: absolute;
 }
 
